front-end/src/components/theZone/TheZonePost.css
.title {
  font-size: 35px;
  white-space: nowrap;
}
.titleContainer {
  overflow:hidden;
}
.postTitle {
  width: calc(100% - 10px);
  margin: 2px;
}

.post {
  border: 1px solid black;
  margin: 5px;
}

.postHeader {
  border: 1px solid black;
  height: 100px;
}

.percentageText {
  color: #61892F;
  font-size: 40px;
}

.comment {
  border: 1px solid black;
}

.agree {
  float: right;
  margin-right: 10px;
}

.percentageDisplay {
  float: right;
}
.smlButton {
  float: right;
  width: 20px;
  height: 20px;
  font-size: 10px;
  font-weight:bold;
  color: #61892F;
}

